analyzer/tests/snapshots/errors__binary_op_add_uints.snap
---
source: analyzer/tests/errors.rs
expression: "error_string(\"[snippet]\", &src)"

---


TypeError on line 4
pub def f():
  a: u256 = 1
  [31mb: u8 = 2[0m
  a + b
