analyzer/tests/snapshots/errors__binary_op_boolean_mismatch1.snap
---
source: analyzer/tests/errors.rs
expression: "error_string(\"[snippet]\", &src)"

---
error: binary op `and` operands must have type `bool`
  ┌─ [snippet]:3:3
  │
3 │   10 and true
  │   ^^ this has type `u256`; expected `bool`


