analyzer/tests/snapshots/errors__binary_op_lshift_bool.snap
---
source: analyzer/tests/errors.rs
expression: "error_string(\"[snippet]\", &src)"

---


TypeError on line 5
[31ma << b[0m
