analyzer/tests/snapshots/errors__binary_op_lshift_with_int.snap
---
source: analyzer/tests/errors.rs
expression: "error_string(\"[snippet]\", &src)"

---


TypeError on line 4
pub def f():
  a: u256 = 1
  [31mb: i256 = 2[0m
  a << b
