analyzer/tests/snapshots/errors__binary_op_pow_int.snap
---
source: analyzer/tests/errors.rs
expression: "error_string(\"[snippet]\", &src)"

---


SignedExponentNotAllowed on line 5
[31ma ** b[0m
