analyzer/tests/snapshots/errors__break_without_loop.snap
---
source: analyzer/tests/errors.rs
expression: "error_string(\"[snippet]\", &src)"

---
error: `break` outside of a loop
  ┌─ [snippet]:3:3
  │
3 │   break
  │   ^^^^^ cannot `break` outside of a `for` or `while` loop


