analyzer/tests/snapshots/errors__call_undefined_function_on_contract.snap
---
source: analyzer/tests/errors.rs
expression: "error_string(&path, &src)"

---


UndefinedValue on line 3
[31mself.doesnt_exist()[0m
