analyzer/tests/snapshots/errors__call_undefined_function_on_external_contract.snap
---
source: analyzer/tests/errors.rs
expression: "error_string(&path, &src)"

---


UndefinedValue on line 7
[31mFoo(address(0)).doesnt_exist()[0m
