analyzer/tests/snapshots/errors__call_undefined_function_on_memory_struct.snap
---
source: analyzer/tests/errors.rs
expression: "error_string(&path, &src)"

---


UndefinedValue on line 7
[31mthingy.doesnt_exist()[0m
